# NeuralNetwork

./: CMakeLists.txt  README.md  build.sh
build_gui/: CMakeCache.txt  Makefile  cmake_install.cmake
build_gui/gui/: Makefile  backend_trainer  cmake_install.cmake
examples/: main.cpp  mnist_example.cpp  mnist_example_improved.cpp  xor_example.cpp
gui/: CMakeLists.txt  backend_trainer.cpp  index.html  main.cpp  mainwindow.cpp  mainwindow.h  networkvisualizationwidget.h  server.js
include/: Data.h  Layer.h  Loss.h  Network.h  Optimizer.h  Tensor.h  Training.h
src/: Activation.cpp  Adam.cpp  Data.cpp  Linear.cpp  Loss.cpp  Network.cpp  Optimizer.cpp  Tensor.cpp  Training.cpp
tests/: test_main.cpp
xor_only/: CMakeLists.txt  README.md
xor_only/examples/: xor_example.cpp
xor_only/include/: Layer.h  Loss.h  Network.h  Tensor.h
xor_only/src/: Layer.cpp  Loss.cpp  Network.cpp  Tensor.cpp
